reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,командлет
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/07/2020
ms.locfileid: "93230761"
---
# <span data-ttu-id="51359-103">Модуль Microsoft.PowerShell.Core</span><span class="sxs-lookup"><span data-stu-id="51359-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="51359-104">Описание</span><span class="sxs-lookup"><span data-stu-id="51359-104">Description</span></span>

<span data-ttu-id="51359-105">В этом разделе содержатся разделы справки по командлетам, которые устанавливаются с помощью модуля PowerShell Microsoft. PowerShell. Core.</span><span class="sxs-lookup"><span data-stu-id="51359-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="51359-106">Модуль Core содержит командлеты и поставщики, которые управляют базовыми функциями PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="51359-107">Командлеты Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="51359-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="51359-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="51359-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="51359-109">Добавляет записи в журнал сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="51359-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="51359-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="51359-111">Добавляет в текущий сеанс одну или несколько оснасток Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="51359-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="51359-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="51359-113">Удаляет записи из журнала команд сеанса PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="51359-114">Clear-Host;</span><span class="sxs-lookup"><span data-stu-id="51359-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="51359-115">Удаляет отображаемые данные в основной программе.</span><span class="sxs-lookup"><span data-stu-id="51359-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="51359-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="51359-117">Выполняет повторное подключение к отключенным сеансам.</span><span class="sxs-lookup"><span data-stu-id="51359-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="51359-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="51359-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="51359-119">Выполняет отладку выполняемого фонового, удаленного или рабочего процесса Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="51359-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="51359-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="51359-121">Предотвращает получение удаленных подключений конечными точками PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="51359-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="51359-123">Отключает конфигурации сеансов на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="51359-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="51359-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="51359-125">Отключает от сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="51359-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="51359-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="51359-127">Настраивает прием удаленных команд на компьютере.</span><span class="sxs-lookup"><span data-stu-id="51359-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="51359-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="51359-129">Включает конфигурации сеанса на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="51359-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="51359-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="51359-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="51359-131">Подключается к интерактивному сеансу с локальным процессом и входит в него.</span><span class="sxs-lookup"><span data-stu-id="51359-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="51359-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="51359-133">Запускает интерактивный сеанс с удаленным компьютером.</span><span class="sxs-lookup"><span data-stu-id="51359-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="51359-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="51359-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="51359-135">Закрывает интерактивный сеанс с локальным процессом.</span><span class="sxs-lookup"><span data-stu-id="51359-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="51359-136">Exit-PSSession;</span><span class="sxs-lookup"><span data-stu-id="51359-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="51359-137">Завершает интерактивный сеанс с удаленным компьютером.</span><span class="sxs-lookup"><span data-stu-id="51359-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="51359-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="51359-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="51359-139">Экспортирует имена оснасток в текущем сеансе в файл консоли.</span><span class="sxs-lookup"><span data-stu-id="51359-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="51359-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="51359-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="51359-141">Задает элементы модуля, доступные для экспорта.</span><span class="sxs-lookup"><span data-stu-id="51359-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="51359-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="51359-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="51359-143">Выполняет операцию для каждого элемента в коллекции входных объектов.</span><span class="sxs-lookup"><span data-stu-id="51359-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="51359-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="51359-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="51359-145">Получает все команды.</span><span class="sxs-lookup"><span data-stu-id="51359-145">Gets all commands.</span></span>

### [<span data-ttu-id="51359-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="51359-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="51359-147">Отображает сведения о командах и концепциях PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="51359-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="51359-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="51359-149">Возвращает список команд, введенных во время текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="51359-150">Get-Job.</span><span class="sxs-lookup"><span data-stu-id="51359-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="51359-151">Возвращает фоновые задания PowerShell, выполняемые в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="51359-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="51359-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="51359-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="51359-153">Возвращает модули, которые были или могут быть импортированы в текущий сеанс.</span><span class="sxs-lookup"><span data-stu-id="51359-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="51359-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="51359-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="51359-155">Возвращает сведения о процессе для узла PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="51359-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="51359-157">Получает сеансы PowerShell на локальных и удаленных компьютерах.</span><span class="sxs-lookup"><span data-stu-id="51359-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="51359-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="51359-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="51359-159">Возвращает возможности конкретного пользователя в конфигурации ограниченного сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="51359-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="51359-161">Получает зарегистрированные конфигурации сеанса на компьютере.</span><span class="sxs-lookup"><span data-stu-id="51359-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="51359-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="51359-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="51359-163">Получает оснастки Windows PowerShell на компьютере.</span><span class="sxs-lookup"><span data-stu-id="51359-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="51359-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="51359-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="51359-165">Получает утвержденные команды PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="51359-166">Import-Module</span><span class="sxs-lookup"><span data-stu-id="51359-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="51359-167">Добавляет модули в текущий сеанс.</span><span class="sxs-lookup"><span data-stu-id="51359-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="51359-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="51359-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="51359-169">Выполняет команды на локальных и удаленных компьютерах.</span><span class="sxs-lookup"><span data-stu-id="51359-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="51359-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="51359-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="51359-171">Выполняет команды из журнала сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="51359-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="51359-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="51359-173">Создает новый динамический модуль, который существует только в памяти.</span><span class="sxs-lookup"><span data-stu-id="51359-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="51359-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="51359-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="51359-175">Создает новый манифест модуля.</span><span class="sxs-lookup"><span data-stu-id="51359-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="51359-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="51359-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="51359-177">Создает файл, который определяет набор возможностей, предоставляемых через конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="51359-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="51359-179">Создает постоянное подключение к локальному или удаленному компьютеру.</span><span class="sxs-lookup"><span data-stu-id="51359-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="51359-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="51359-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="51359-181">Создает файл, определяющий конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="51359-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="51359-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="51359-183">Создает объект, содержащий дополнительные параметры для сеанса PSSession.</span><span class="sxs-lookup"><span data-stu-id="51359-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="51359-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="51359-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="51359-185">Создает объект, содержащий дополнительные параметры для конфигурации сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="51359-186">Out-Default;</span><span class="sxs-lookup"><span data-stu-id="51359-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="51359-187">Отправляет выходные данные в модуль форматирования и в выходной командлет по умолчанию.</span><span class="sxs-lookup"><span data-stu-id="51359-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="51359-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="51359-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="51359-189">Отправляет вывод в командную строку.</span><span class="sxs-lookup"><span data-stu-id="51359-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="51359-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="51359-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="51359-191">Скрывает выходные данные вместо отправки их в конвейер или отображения.</span><span class="sxs-lookup"><span data-stu-id="51359-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="51359-192">Receive-Job.</span><span class="sxs-lookup"><span data-stu-id="51359-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="51359-193">Возвращает результаты фоновых заданий PowerShell в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="51359-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="51359-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="51359-195">Возвращает результаты выполнения команд в отключенных сеансах.</span><span class="sxs-lookup"><span data-stu-id="51359-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="51359-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="51359-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="51359-197">Регистрирует пользовательский аргумент для завершения.</span><span class="sxs-lookup"><span data-stu-id="51359-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="51359-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="51359-199">Создает и регистрирует новую конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="51359-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="51359-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="51359-201">Удаляет фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="51359-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="51359-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="51359-203">Удаляет модули из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="51359-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="51359-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="51359-205">Закрывает один или несколько сеансов PowerShell (PSSession).</span><span class="sxs-lookup"><span data-stu-id="51359-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="51359-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="51359-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="51359-207">Удаляет оснастки Windows PowerShell из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="51359-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="51359-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="51359-209">Перезапускает приостановленное задание.</span><span class="sxs-lookup"><span data-stu-id="51359-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="51359-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="51359-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="51359-211">Скачивает и сохраняет последние файлы справки в каталог файловой системы.</span><span class="sxs-lookup"><span data-stu-id="51359-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="51359-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="51359-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="51359-213">Включает и выключает функции отладки сценариев, задает уровень трассировки и переключает строгий режим.</span><span class="sxs-lookup"><span data-stu-id="51359-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="51359-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="51359-215">Изменяет свойства конфигурации зарегистрированного сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="51359-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="51359-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="51359-217">Устанавливает и применяет правила кодирования в выражениях, сценариях и блоках сценариев.</span><span class="sxs-lookup"><span data-stu-id="51359-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="51359-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="51359-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="51359-219">Запускает фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="51359-220">Stop-Job.</span><span class="sxs-lookup"><span data-stu-id="51359-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="51359-221">Останавливает фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51359-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="51359-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="51359-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="51359-223">Временно останавливает задания рабочих процессов.</span><span class="sxs-lookup"><span data-stu-id="51359-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="51359-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="51359-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="51359-225">Проверяет, точно ли описывает файл манифеста модуля его содержимое.</span><span class="sxs-lookup"><span data-stu-id="51359-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="51359-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="51359-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="51359-227">Проверяет ключи и значения в файле конфигурации сеанса.</span><span class="sxs-lookup"><span data-stu-id="51359-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="51359-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="51359-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="51359-229">Удаляет зарегистрированные конфигурации сеанса с компьютера.</span><span class="sxs-lookup"><span data-stu-id="51359-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="51359-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="51359-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="51359-231">Скачивает и устанавливает новейшие файлы справки на компьютер.</span><span class="sxs-lookup"><span data-stu-id="51359-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="51359-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="51359-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="51359-233">Подавляет командную строку до завершения выполнения одного или всех фоновых заданий PowerShell, выполняемых в этом сеансе.</span><span class="sxs-lookup"><span data-stu-id="51359-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="51359-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="51359-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="51359-235">Выбирает объекты из коллекции на основании значения их свойств.</span><span class="sxs-lookup"><span data-stu-id="51359-235">Selects objects from a collection based on their property values.</span></span>
