reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,командлет
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/07/2020
ms.locfileid: "93230874"
---
# <span data-ttu-id="d41cb-103">Модуль Microsoft.PowerShell.Core</span><span class="sxs-lookup"><span data-stu-id="d41cb-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="d41cb-104">Описание</span><span class="sxs-lookup"><span data-stu-id="d41cb-104">Description</span></span>

<span data-ttu-id="d41cb-105">В этом разделе содержатся разделы справки по командлетам, которые устанавливаются с помощью модуля PowerShell Microsoft. PowerShell. Core.</span><span class="sxs-lookup"><span data-stu-id="d41cb-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="d41cb-106">Модуль Core содержит командлеты и поставщики, которые управляют базовыми функциями PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="d41cb-107">Командлеты Microsoft. PowerShell. Core</span><span class="sxs-lookup"><span data-stu-id="d41cb-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="d41cb-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="d41cb-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="d41cb-109">Добавляет записи в журнал сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="d41cb-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="d41cb-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="d41cb-111">Удаляет записи из журнала команд сеанса PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="d41cb-112">Clear-Host;</span><span class="sxs-lookup"><span data-stu-id="d41cb-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="d41cb-113">Удаляет отображаемые данные в основной программе.</span><span class="sxs-lookup"><span data-stu-id="d41cb-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="d41cb-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="d41cb-115">Выполняет повторное подключение к отключенным сеансам.</span><span class="sxs-lookup"><span data-stu-id="d41cb-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="d41cb-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="d41cb-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="d41cb-117">Выполняет отработку ошибок выполняемого фонового, удаленного или рабочего процесса PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="d41cb-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d41cb-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="d41cb-119">Отключите экспериментальную функцию при запуске нового экземпляра PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="d41cb-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="d41cb-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="d41cb-121">Предотвращает получение удаленных подключений конечными точками PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="d41cb-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-123">Отключает конфигурации сеансов на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="d41cb-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="d41cb-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="d41cb-125">Отключает от сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="d41cb-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d41cb-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="d41cb-127">Включите экспериментальную функцию при запуске нового экземпляра PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="d41cb-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="d41cb-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="d41cb-129">Настраивает прием удаленных команд на компьютере.</span><span class="sxs-lookup"><span data-stu-id="d41cb-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="d41cb-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-131">Включает конфигурации сеанса на локальном компьютере.</span><span class="sxs-lookup"><span data-stu-id="d41cb-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="d41cb-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="d41cb-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="d41cb-133">Подключается к интерактивному сеансу с локальным процессом и входит в него.</span><span class="sxs-lookup"><span data-stu-id="d41cb-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="d41cb-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="d41cb-135">Запускает интерактивный сеанс с удаленным компьютером.</span><span class="sxs-lookup"><span data-stu-id="d41cb-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="d41cb-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="d41cb-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="d41cb-137">Закрывает интерактивный сеанс с локальным процессом.</span><span class="sxs-lookup"><span data-stu-id="d41cb-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="d41cb-138">Exit-PSSession;</span><span class="sxs-lookup"><span data-stu-id="d41cb-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="d41cb-139">Завершает интерактивный сеанс с удаленным компьютером.</span><span class="sxs-lookup"><span data-stu-id="d41cb-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="d41cb-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="d41cb-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="d41cb-141">Задает элементы модуля, доступные для экспорта.</span><span class="sxs-lookup"><span data-stu-id="d41cb-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="d41cb-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="d41cb-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="d41cb-143">Выполняет операцию для каждого элемента в коллекции входных объектов.</span><span class="sxs-lookup"><span data-stu-id="d41cb-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="d41cb-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="d41cb-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="d41cb-145">Получает все команды.</span><span class="sxs-lookup"><span data-stu-id="d41cb-145">Gets all commands.</span></span>

### [<span data-ttu-id="d41cb-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d41cb-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="d41cb-147">Получает экспериментальные функции.</span><span class="sxs-lookup"><span data-stu-id="d41cb-147">Gets experimental features.</span></span>

### [<span data-ttu-id="d41cb-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="d41cb-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="d41cb-149">Отображает сведения о командах и концепциях PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="d41cb-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="d41cb-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="d41cb-151">Возвращает список команд, введенных во время текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="d41cb-152">Get-Job.</span><span class="sxs-lookup"><span data-stu-id="d41cb-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="d41cb-153">Возвращает фоновые задания PowerShell, выполняемые в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="d41cb-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="d41cb-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="d41cb-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="d41cb-155">Возвращает модули, которые были или могут быть импортированы в текущий сеанс.</span><span class="sxs-lookup"><span data-stu-id="d41cb-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="d41cb-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="d41cb-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="d41cb-157">Возвращает сведения о процессе для узла PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="d41cb-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="d41cb-159">Получает сеансы PowerShell на локальных и удаленных компьютерах.</span><span class="sxs-lookup"><span data-stu-id="d41cb-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="d41cb-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="d41cb-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="d41cb-161">Возвращает возможности конкретного пользователя в конфигурации ограниченного сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="d41cb-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-163">Получает зарегистрированные конфигурации сеанса на компьютере.</span><span class="sxs-lookup"><span data-stu-id="d41cb-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="d41cb-164">Import-Module</span><span class="sxs-lookup"><span data-stu-id="d41cb-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="d41cb-165">Добавляет модули в текущий сеанс.</span><span class="sxs-lookup"><span data-stu-id="d41cb-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="d41cb-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="d41cb-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="d41cb-167">Выполняет команды на локальных и удаленных компьютерах.</span><span class="sxs-lookup"><span data-stu-id="d41cb-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="d41cb-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="d41cb-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="d41cb-169">Выполняет команды из журнала сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="d41cb-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="d41cb-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="d41cb-171">Создает новый динамический модуль, который существует только в памяти.</span><span class="sxs-lookup"><span data-stu-id="d41cb-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="d41cb-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="d41cb-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="d41cb-173">Создает новый манифест модуля.</span><span class="sxs-lookup"><span data-stu-id="d41cb-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="d41cb-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="d41cb-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="d41cb-175">Создает файл, который определяет набор возможностей, предоставляемых через конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="d41cb-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="d41cb-177">Создает постоянное подключение к локальному или удаленному компьютеру.</span><span class="sxs-lookup"><span data-stu-id="d41cb-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="d41cb-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="d41cb-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="d41cb-179">Создает файл, определяющий конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="d41cb-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="d41cb-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="d41cb-181">Создает объект, содержащий дополнительные параметры для сеанса PSSession.</span><span class="sxs-lookup"><span data-stu-id="d41cb-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="d41cb-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="d41cb-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="d41cb-183">Создает объект, содержащий дополнительные параметры для конфигурации сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="d41cb-184">Out-Default;</span><span class="sxs-lookup"><span data-stu-id="d41cb-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="d41cb-185">Отправляет выходные данные в модуль форматирования и в выходной командлет по умолчанию.</span><span class="sxs-lookup"><span data-stu-id="d41cb-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="d41cb-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="d41cb-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="d41cb-187">Отправляет вывод в командную строку.</span><span class="sxs-lookup"><span data-stu-id="d41cb-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="d41cb-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="d41cb-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="d41cb-189">Скрывает выходные данные вместо отправки их в конвейер или отображения.</span><span class="sxs-lookup"><span data-stu-id="d41cb-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="d41cb-190">Receive-Job.</span><span class="sxs-lookup"><span data-stu-id="d41cb-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="d41cb-191">Возвращает результаты фоновых заданий PowerShell в текущем сеансе.</span><span class="sxs-lookup"><span data-stu-id="d41cb-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="d41cb-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="d41cb-193">Возвращает результаты выполнения команд в отключенных сеансах</span><span class="sxs-lookup"><span data-stu-id="d41cb-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="d41cb-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="d41cb-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="d41cb-195">Регистрирует пользовательский аргумент для завершения.</span><span class="sxs-lookup"><span data-stu-id="d41cb-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="d41cb-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-197">Создает и регистрирует новую конфигурацию сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="d41cb-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="d41cb-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="d41cb-199">Удаляет фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="d41cb-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="d41cb-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="d41cb-201">Удаляет модули из текущего сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="d41cb-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="d41cb-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="d41cb-203">Закрывает один или несколько сеансов PowerShell (PSSession).</span><span class="sxs-lookup"><span data-stu-id="d41cb-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="d41cb-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="d41cb-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="d41cb-205">Скачивает и сохраняет последние файлы справки в каталог файловой системы.</span><span class="sxs-lookup"><span data-stu-id="d41cb-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="d41cb-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="d41cb-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="d41cb-207">Включает и выключает функции отладки сценариев, задает уровень трассировки и переключает строгий режим.</span><span class="sxs-lookup"><span data-stu-id="d41cb-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="d41cb-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-209">Изменяет свойства конфигурации зарегистрированного сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="d41cb-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="d41cb-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="d41cb-211">Устанавливает и применяет правила кодирования в выражениях, сценариях и блоках сценариев.</span><span class="sxs-lookup"><span data-stu-id="d41cb-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="d41cb-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="d41cb-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="d41cb-213">Запускает фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="d41cb-214">Stop-Job.</span><span class="sxs-lookup"><span data-stu-id="d41cb-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="d41cb-215">Останавливает фоновое задание PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d41cb-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="d41cb-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="d41cb-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="d41cb-217">Проверяет, точно ли описывает файл манифеста модуля его содержимое.</span><span class="sxs-lookup"><span data-stu-id="d41cb-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="d41cb-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="d41cb-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="d41cb-219">Проверяет ключи и значения в файле конфигурации сеанса.</span><span class="sxs-lookup"><span data-stu-id="d41cb-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="d41cb-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d41cb-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="d41cb-221">Удаляет зарегистрированные конфигурации сеанса с компьютера.</span><span class="sxs-lookup"><span data-stu-id="d41cb-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="d41cb-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="d41cb-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="d41cb-223">Скачивает и устанавливает новейшие файлы справки на компьютер.</span><span class="sxs-lookup"><span data-stu-id="d41cb-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="d41cb-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="d41cb-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="d41cb-225">Подавляет командную строку до завершения выполнения одного или всех фоновых заданий PowerShell, выполняемых в этом сеансе.</span><span class="sxs-lookup"><span data-stu-id="d41cb-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="d41cb-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="d41cb-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="d41cb-227">Выбирает объекты из коллекции на основании значения их свойств.</span><span class="sxs-lookup"><span data-stu-id="d41cb-227">Selects objects from a collection based on their property values.</span></span>
